MD-1256: Test case for new parameter DRILLBIT_CONTEXT